FIXED: Collapse chart after load #95 Custom buttons/context menu items implemented Advanced control on drawings availability implemented

--- a/charting_library/static/chart-client/css/chartclient_full.compiled.css
+++ b/charting_library/static/chart-client/css/chartclient_full.compiled.css
@@ -5486,6 +5486,9 @@ a.getimage .icon {
 .tv-side-toolbar .tools-group .button.hidden {
   display: none;
 }
+.tv-side-toolbar .tools-group .button .main.grayed {
+  opacity: 0.3;
+}
 .tv-side-toolbar .help-button-container {
   position: absolute;
   left: 0;
