--- a/charting_library/static/css/site.compiled.css
+++ b/charting_library/static/css/site.compiled.css
@@ -671,6 +671,9 @@ body.fullscreen-mode {
   border-radius: 2px;
   top: 5px;
 }
+.charts-popup-list .item.grayed span {
+  opacity: 0.3;
+}
 .charts-popup-list.small-font {
   font-size: 12px;
 }
